# robot_capstone

./: .gitignore  .gitmodules  CLAUDE.md  Franka MoveIt2.usd  README.md  ROS_NODES.md  import_downloaded_assets.py  launch_env.bash  requirements.txt  run_capstone_scene.sh  run_hazard_demo.sh  run_import_assets.sh  setup_initial_scene.py
.claude/: settings.local.json
.claude/skills/github-repo-scope/: SKILL.md
assets/imported/: Apple.usd  Blue_Cube.usd  Book.usd  Glass.usd  Glass_ikea_source.usd  P_Glassware_Short.usd  Water_Bottle.usd
config/: robot_defaults.yaml
models/qwen3.5/: qwen_ssh_client.py  qwenapi.py
models/yolo26/training/: .gitignore  README.md  add_roboflow_coco.py  check_datasets.py  config.yaml  merge_datasets.py  requirements.txt  train.py
ros_pkgs/: node_graph_0519.puml
ros_pkgs/src/behavior_tree/BehaviorTree.CPP/.github/workflows/: pixi.yaml
ros_pkgs/src/bt_pkg/: CMakeLists.txt  README.md  package.xml
ros_pkgs/src/bt_pkg/behavior_trees/: bt_models.xml  move_action_test.xml  move_action_test_stop_resume.xml  pick_and_place.xml
ros_pkgs/src/bt_pkg/config/: bt_params.yaml
ros_pkgs/src/bt_pkg/include/bt_pkg/: action_nodes.hpp  condition_nodes.hpp  destination_calculator.hpp  scene_data.hpp
ros_pkgs/src/bt_pkg/launch/: bt_system.launch.py
ros_pkgs/src/bt_pkg/scripts/: hazard_level_translator_node.py  yolo_world_map_node.py
ros_pkgs/src/bt_pkg/src/: bt_executor_node.cpp  destination_calculator.cpp
ros_pkgs/src/bt_pkg/src/action_nodes/: gripper_action.cpp  move_action.cpp  move_to_home.cpp  parse_scene.cpp  request_replan.cpp  select_grasp_candidate.cpp  update_target_pose.cpp  wait_for_scene.cpp
ros_pkgs/src/bt_pkg/src/condition_nodes/: emergency_stop_clear.cpp  target_visible.cpp
ros_pkgs/src/graspgen_pkg/: README.md  package.xml  setup.cfg  setup.py
ros_pkgs/src/graspgen_pkg/config/: graspgen_params.yaml
ros_pkgs/src/graspgen_pkg/graspgen_pkg/: cloud_extractor.py  depth_utils.py  grasp_filter.py  graspgen_node.py  marker_publisher.py  zmq_client.py
ros_pkgs/src/graspgen_pkg/launch/: full_pipeline_graspgen.launch.py  graspgen.launch.py
ros_pkgs/src/grounded_sam_pkg/: README.md  requirements.txt  setup.py
ros_pkgs/src/grounded_sam_pkg/config/: model_paths.yaml
ros_pkgs/src/grounded_sam_pkg/grounded_sam_pkg/: gdino_runner.py  instruction_parser_node.py  pipeline.py  qwen_stub_node.py  ros_node.py
ros_pkgs/src/grounded_sam_pkg/launch/: grounded_sam.launch.py  grounded_sam_dual.launch.py  grounded_sam_ee.launch.py
ros_pkgs/src/mask_projection_pkg/: README.md  setup.py
ros_pkgs/src/mask_projection_pkg/config/: camera_extrinsics.yaml
ros_pkgs/src/mask_projection_pkg/launch/: isaac_ee_grounded_projection.launch.py  isaac_grounded_projection.launch.py  mask_projector.launch.py  multi_view_projector.launch.py
ros_pkgs/src/mask_projection_pkg/mask_projection_pkg/: label_mapper.py  multi_view_projector_node.py  ply_utils.py  projector_node.py
ros_pkgs/src/moveit_isaac_bridge_pkg/: package.xml  setup.cfg  setup.py
ros_pkgs/src/moveit_isaac_bridge_pkg/config/: moveit.rviz  moveit_controllers.yaml
ros_pkgs/src/moveit_isaac_bridge_pkg/config/hybrid/: global_planner.yaml  hybrid_planning_manager.yaml  hybrid_planning_manager_replan.yaml  local_planner.yaml  local_planner_replan.yaml
ros_pkgs/src/moveit_isaac_bridge_pkg/launch/: capstone_pick_pipeline.launch.py  hazard_avoidance_viz.launch.py  hazard_collision_injector.launch.py  hazard_collision_injector_ee.launch.py  hazard_monitor.launch.py  hybrid_planning.launch.py  joint_trajectory_bridge.launch.py  panda_isaac_moveit.launch.py  target_pose_executor.launch.py
ros_pkgs/src/moveit_isaac_bridge_pkg/moveit_isaac_bridge_pkg/: gripper_action_server.py  hazard_collision_injector_node.py  hazard_monitor_node.py  hybrid_command_bridge_node.py  hybrid_pose_client_node.py  joint_state_restamp_node.py  joint_trajectory_bridge_node.py  target_pose_executor_node.py
ros_pkgs/src/moveit_isaac_bridge_pkg/resource/: moveit_isaac_bridge_pkg
ros_pkgs/src/qwen_pkg/: README.md  package.xml  setup.cfg  setup.py
ros_pkgs/src/qwen_pkg/launch/: inst_input_qwen.launch.py
ros_pkgs/src/qwen_pkg/qwen_pkg/: instruction_prompt_node.py  qwen_bridge.py  qwen_call.py
ros_pkgs/src/target_pose_bridge_pkg/: package.xml  setup.cfg  setup.py
ros_pkgs/src/target_pose_bridge_pkg/launch/: target_pose_bridge.launch.py
ros_pkgs/src/target_pose_bridge_pkg/resource/: target_pose_bridge_pkg
ros_pkgs/src/target_pose_bridge_pkg/target_pose_bridge_pkg/: target_pose_bridge_node.py
ros_pkgs/src/vgn_grasp_pkg/: README.md  setup.py
ros_pkgs/src/vgn_grasp_pkg/config/: vgn_params.yaml
ros_pkgs/src/vgn_grasp_pkg/launch/: full_pipeline.launch.py  full_pipeline_4cam.launch.py  grasp_debug.launch.py  vgn_grasp.launch.py  vgn_grasp_4cam.launch.py
ros_pkgs/src/vgn_grasp_pkg/rviz/: grasp_demo.rviz
ros_pkgs/src/vgn_grasp_pkg/vgn_grasp_pkg/: depth_utils.py  tsdf_builder.py  vgn_grasp_4cam_node.py  vgn_grasp_node.py
ros_pkgs/src/yolo_hazard_pkg/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ros_pkgs/src/yolo_hazard_pkg/config/: model_paths.yaml  runtime.yaml
ros_pkgs/src/yolo_hazard_pkg/launch/: yolo_hazard_both.launch.py  yolo_hazard_ee.launch.py  yolo_hazard_top.launch.py
ros_pkgs/src/yolo_hazard_pkg/yolo_hazard_pkg/: postprocess.py  ros_node.py  yolo_runner.py
scenes/: robot_capstone_scene.usd
sim/: image_capture_helper.py  import_downloaded_assets.py  isaac_ros_camera_bridge.py  isaac_ros_joint_bridge.py  run_capstone_scene.sh  run_import_assets.sh  setup_initial_scene.py
sim/assets/imported/: Basket.usd  Blue_Cube_source.usd  Book.usd  Book_brown.usd  Book_source.usd  Coffee_Cup.usd  Glass.usd  Glass_source.usd  Phone.usd  Red_Ball.usd  Roxana_RoundEndTable.usd
sim/scenes/: robot_capstone.usd  robot_capstone_scene.usd
