<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_isaac_bridge_pkg</name>
  <version>0.1.0</version>
  <description>
    Bridges MoveIt FollowJointTrajectory execution requests to Isaac Sim joint
    command topics for the Panda arm used in robot_capstone.
  </description>
  <maintainer email="chanwonjung@todo.todo">chanwonjung</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <exec_depend>moveit_hybrid_planning</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <depend>builtin_interfaces</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_resources_panda_moveit_config</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
