<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>target_pose_bridge_pkg</name>
  <version>0.1.0</version>
  <description>
    Converts mask projection target centroids into MoveIt-compatible grasp and
    pre-grasp PoseStamped goals for the robot_capstone pipeline.
  </description>
  <maintainer email="chanwonjung@todo.todo">chanwonjung</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
