<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_hazard_pkg</name>
  <version>0.0.0</version>
  <description>Fast Brain YOLO26-seg hazard detection node — publishes instance-seg detections of hand / forearm / pet_bottle / small_box for MoveIt dynamic collision injection.</description>
  <maintainer email="hyper.robotics.khu@gmail.com">capstone</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
